--- a/src/i18n/zh/acc_traderpw.json
+++ b/src/i18n/zh/acc_traderpw.json
@@ -28,5 +28,30 @@
 	"forgetPwd":"忘记密码?",
 	"tradePwd":"交易密码",
 	"importantNote":"重要提示",
-	"importantNoteDesc":"请务必如实填写正确的姓名以及对应的身份证号，当您忘记交易密码的时候，可用于找回交易密码."
+	"importantNoteDesc":"请务必如实填写正确的姓名以及对应的身份证号，当您忘记交易密码的时候，可用于找回交易密码.",
+	
+	"":"账号验证",
+	"":"您绑定的手机号为",
+	"":"请选择有效证件",
+	"":"收不到验证码？",
+	"":"短信验证仅支持国内用户，请您直接",
+	"":"联系客服",
+	"":"找回交易密码？",
+	"":"输入新密码6位数字",
+	"":"输入确认密码6位数字",
+	"":"找回交易密码？",
+	"":"交易密码设置成功,请牢记！",
+	"":"交易密码设置失败！",
+	"":"返回\" 我的钱包 \"",
+	"":"(客服服务时间：周一到周五9：00-18：00)",
+	"":"客服电话",
+	"":"拨打电话",
+	"":"客服微信",
+	"":"微信联系",
+	"":"长按识别二维码添加客服微信",
+	"":{
+		"" : "验证码",
+		"" : "获取验证码",
+		"" : "请输入验证码"
+	  }
 }
